// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queries indexes: all ndexes 1`] = `
Array [
  Object {
    "description": undefined,
    "kind": "input",
    "name": "a",
    "order": 0,
    "required": false,
    "title": undefined,
    "type": "String",
  },
  Object {
    "name": "b",
    "type": Object {
      "fields": Array [
        Object {
          "description": undefined,
          "kind": "input",
          "name": "b",
          "order": 0,
          "required": false,
          "title": undefined,
          "type": "String",
        },
        Object {
          "description": undefined,
          "kind": "input",
          "name": "c",
          "order": 1,
          "required": false,
          "title": undefined,
          "type": "String",
        },
      ],
      "name": "b",
    },
  },
]
`;

exports[`queries unique indexes: all identity indexes 1`] = `
Array [
  Object {
    "description": undefined,
    "kind": "input",
    "name": "a",
    "order": 0,
    "required": true,
    "title": undefined,
    "type": "String",
  },
  Object {
    "name": "b",
    "type": Object {
      "fields": Array [
        Object {
          "description": undefined,
          "kind": "input",
          "name": "b",
          "order": 0,
          "required": true,
          "title": undefined,
          "type": "String",
        },
        Object {
          "description": undefined,
          "kind": "input",
          "name": "c",
          "order": 1,
          "required": true,
          "title": undefined,
          "type": "String",
        },
      ],
      "name": "b",
    },
  },
  Object {
    "description": undefined,
    "kind": "input",
    "name": "id",
    "order": 0,
    "required": true,
    "title": undefined,
    "type": "ID",
  },
]
`;
